@@ -7,14 +7,14 @@ import com.fasterxml.jackson.databind.JsonDeserializer;
 import java.io.IOException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
 public class LocalDateTimeDeserializer extends JsonDeserializer<Date> {
-    private static final List<String> DATE_FORMATS = List.of(
+    private static final List<String> DATE_FORMATS = Arrays.asList(
             "yyyy-MM-dd'T'HH:mm:ss",
-            "dd-MM-yyyy hh:mm:ss a z"
-    );
+            "dd-MM-yyyy hh:mm:ss a z");
 
     @Override
     public Date deserialize(JsonParser jsonParser, DeserializationContext deserializationContext) throws IOException {
